# Forge

./: .gitignore  README.md  config.toml.example  main.py  pyproject.toml  run.py
forge/: __init__.py  agent.py  app.py  config.py  instructions.py  llm.py  models.py  monitor.py  project.py  safety.py  shell.py  sysinfo.py  tools.py
