[project]
name = "forge"
version = "0.1.0"
description = "AI-powered terminal for coding — local (Ollama) and cloud (Gemini) models"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0",
    "ollama>=0.4",
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.20",
]

[project.scripts]
forge = "forge.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
